k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nms
  labels:
    project: nms
