k8s/mysql-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-deployment
#  namespace: nms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        imagePullPolicy: Always
        name: mysql
        ports:
        - containerPort: 3306
