k8s/backend-svc-load-balancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
#  namespace: nms
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
  type: LoadBalancer
