k8s/frontend-svc-load-balancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
#  namespace: nms
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000 
  type: LoadBalancer
