k8s/frontend-svc-node-port.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: nms
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000 
    nodePort: 30000
  type: NodePort
