k8s/frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: nms
spec:
  selector:
    app: nms-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000 
    nodePort: 30000
  type: NodePort
