k8s/mysql-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
#  namespace: nms
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
